Adapt bulk chain payload to 1.20.1
NBT-era ItemStack (isSameItemSameTags), Recipe<?> instead of
RecipeHolder for the rapid-eject restage, gameMode.getPickRange() for
reach, ResourceLocation constructor instead of parse, and Java 17
List.get(0) instead of getFirst.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>